--- a/notebooks/useful_methods/Character_Level_RNN.ipynb
+++ b/notebooks/useful_methods/Character_Level_RNN.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -756,7 +756,7 @@
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 2/20... Step: 10... Loss: 3.3011... Val Loss: nan\n"
+      "Epoch: 2/20... Step: 10... Loss: 3.0254... Val Loss: nan\n"
      ]
     },
     {
@@ -776,43 +776,43 @@
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 4/20... Step: 20... Loss: 3.1366... Val Loss: nan\n",
+      "Epoch: 4/20... Step: 20... Loss: 2.9949... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 5/20... Step: 30... Loss: 3.0990... Val Loss: nan\n",
-      "(128, 600)\n",
-      "(128, 600)\n",
-      "(128, 0)\n",
-      "Epoch: 7/20... Step: 40... Loss: 3.0913... Val Loss: nan\n",
+      "Epoch: 5/20... Step: 30... Loss: 2.9397... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 9/20... Step: 50... Loss: 3.0795... Val Loss: nan\n",
-      "(128, 600)\n",
-      "(128, 0)\n",
-      "Epoch: 10/20... Step: 60... Loss: 3.0644... Val Loss: nan\n",
+      "Epoch: 7/20... Step: 40... Loss: 2.8911... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 12/20... Step: 70... Loss: 3.0656... Val Loss: nan\n",
+      "Epoch: 9/20... Step: 50... Loss: 2.8215... Val Loss: nan\n",
+      "(128, 600)\n",
+      "(128, 0)\n",
+      "Epoch: 10/20... Step: 60... Loss: 2.7632... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 14/20... Step: 80... Loss: 3.0631... Val Loss: nan\n",
-      "(128, 600)\n",
-      "(128, 0)\n",
-      "Epoch: 15/20... Step: 90... Loss: 3.0490... Val Loss: nan\n",
+      "Epoch: 12/20... Step: 70... Loss: 2.7249... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 17/20... Step: 100... Loss: 3.0511... Val Loss: nan\n",
+      "Epoch: 14/20... Step: 80... Loss: 2.6802... Val Loss: nan\n",
+      "(128, 600)\n",
+      "(128, 0)\n",
+      "Epoch: 15/20... Step: 90... Loss: 2.6415... Val Loss: nan\n",
       "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 19/20... Step: 110... Loss: 3.0476... Val Loss: nan\n",
+      "Epoch: 17/20... Step: 100... Loss: 2.6090... Val Loss: nan\n",
+      "(128, 600)\n",
       "(128, 600)\n",
       "(128, 0)\n",
-      "Epoch: 20/20... Step: 120... Loss: 3.0334... Val Loss: nan\n"
+      "Epoch: 19/20... Step: 110... Loss: 2.5770... Val Loss: nan\n",
+      "(128, 600)\n",
+      "(128, 0)\n",
+      "Epoch: 20/20... Step: 120... Loss: 2.5498... Val Loss: nan\n"
      ]
     }
    ],
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1032,12 +1032,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Annae eeeoer eeo ea   o aao r   reo  eaaoeeoraa oe   ar oa o a  oea  eeraee aoe  r    aao aere oa re ar e ar eer    oa a a  aa     e   ao r aerr aea eaaoa     or oaoao e  aerra rr r ee   aaaare  eaarra eoe o oa e  rraar are     ooeeararooaea rera  eooaeae reooeoroao rea oe    oa  ra aaor  eeo eo    eo e or   e   r        ra aor aoaer a aooeo a rr raeraeareeoeaae e  oa o ar  ro eeoeeaao rrao er e e  oaeo o      oreaoa aoorerora aaaa eoa eo oroa  oa roaa  eor eoraoa oaa eo aro  eaara  e o a eo  er re  eoee   ra a rer aoeo ar oea ao   r a eaar  oaa eoe aaoeeoeeeao aaor  oaoe e   ro ee   aooeao r  aear ea  aae  r   roaor oaraore a eaee    aaoareor reoree reoee ooee   oerae eaeeroar   ro rearao    rooeaa aa oa ea ar  roe  rooee oroa er a aeooaeo e eo raeeo  e ae r ae rrea  aaoo aae   a e oaro oooarae oeo r aorao    eao oaaaorr rre eo e aoeea eo  ar   aa o ereeea e  ao erae e r reer a raar    e e e aeoeoaraeeaae e errr aero rrorree o  eo eera e  ee er  aea a  eaoee or r o roreoar rraaeo roeao oa \n"
+      "El universo\n",
+      "sano a cero pire el disen ar lentela la paroda  un ona en urasa,\n",
+      "do des ere ass era en durtestas es ale el ara des as la as ue lo dinastona as lestol a linan e da ledo de elo,s an a dun io aran uno a a er or en dulan ua la los a lo lada da an an urida a aralo al en uo es as ares en das don astalo es le pene den as an uara pen a en es enana del a an une dasa ana lesa\n",
+      "pera deno pes ia les as ele pente la doros\n",
+      "lo la le perio polentis dirie an di das lo da asas as dorarilas pele las de en en don a lo eno puria lo co a esa alanos ala e es elo,\n",
+      "pelero lo, poltisa lo do danesa duro pero do aranasta da piel e de en ineso al as le da perteno la do le a dasa de durina al piiro lo dira do castare liron es des a en une le paro ara les e ca el lo dan al er eres les luno,., lin onas an es pialis ce el casa distos\n",
+      "entaro piilos en lanara da la lar ane, an aste larole\n",
+      "lu eno le losten al dire ies unas a es uleda, das\n",
+      "e dera as pira a las la es eno el lan el e din e a lon le es de das ertel a le liso \n"
      ]
     }
    ],
    "source": [
-    "print(sample(net, 1000, prime='Anna', top_k=5))"
+    "print(sample(net, 1000, prime='El universo', top_k=5))"
    ]
   },
   {
