--- a/notebooks/useful_methods/borges_first_pass.ipynb
+++ b/notebooks/useful_methods/borges_first_pass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "89845"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "91"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(10, 50)"
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -437,22 +437,22 @@
      "output_type": "stream",
      "text": [
       "indexing error\n",
-      " size of generator 8\n"
+      " size of generator 89\n"
      ]
     },
     {
      "data": {
       "text/plain": "(8984,)"
      },
-     "execution_count": 91,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## VARIABLES\n",
-    "epochs = 10\n",
-    "batch_size = 10\n",
+    "epochs = 1\n",
+    "batch_size = 1\n",
     "seq_len = 100\n",
     "tracker = 0\n",
     "num_char = max(encoded_text)+1\n",
@@ -476,49 +476,35 @@
     "\n",
     "# Check to see if using GPU\n",
     "\n",
-    "if model.use_gpu:\n",
-    "    model.to(\"mps\")\n",
+    "torch.device(\"mps\")\n",
+    "model.to(\"mps\")\n",
     "\n",
     "for i in range(epochs):\n",
     "    \n",
     "    hidden = model.hidden_state(batch_size)\n",
     "    \n",
-    "    \n",
     "    for x,y in generate_batches(train_data,batch_size,seq_len):\n",
     "        \n",
     "        tracker += 1\n",
-    "        \n",
-    "        # One Hot Encode incoming data\n",
     "        x = one_hot_encoder(x,num_char)\n",
-    "        \n",
-    "        # Convert Numpy Arrays to Tensor\n",
-    "        \n",
     "        inputs = torch.from_numpy(x)\n",
     "        targets = torch.from_numpy(y)\n",
-    "        \n",
-    "        # Adjust for GPU if necessary\n",
-    "        \n",
-    "        if model.use_gpu:\n",
+    "        inputs = inputs.to(\"mps\")\n",
+    "        targets = targets.to(\"mps\")\n",
     "            \n",
-    "            inputs = inputs.to(\"mps\")\n",
-    "            targets = targets.to(\"mps\")\n",
-    "            \n",
-    "        # Reset Hidden State\n",
-    "        # If we dont' reset we would backpropagate through all training history\n",
+    "        # If we don't reset we would backpropagate through all training history\n",
     "        hidden = tuple([state.data for state in hidden])\n",
     "        \n",
-    "        model.zero_grad()\n",
-    "        \n",
+    "        optimizer.zero_grad()\n",
     "        lstm_output, hidden = model.forward(inputs,hidden)\n",
     "        loss = criterion(lstm_output,targets.view(batch_size*seq_len).long())\n",
-    "        \n",
     "        loss.backward()\n",
     "        \n",
-    "        # POSSIBLE EXPLODING GRADIENT PROBLEM!\n",
     "        # LET\"S CLIP JUST IN CASE\n",
     "        nn.utils.clip_grad_norm_(model.parameters(),max_norm=5)\n",
-    "        \n",
     "        optimizer.step()\n",
+    "\n",
+    "        print(loss)\n",
     "        \n",
     "        ###################################\n",
     "        ### CHECK ON VALIDATION SET ######\n",
@@ -532,26 +518,15 @@
     "            \n",
     "            for x,y in generate_batches(val_data,batch_size,seq_len):\n",
     "                \n",
-    "                # One Hot Encode incoming data\n",
     "                x = one_hot_encoder(x,num_char)\n",
-    "                # Convert Numpy Arrays to Tensor\n",
-    "\n",
     "                inputs = torch.from_numpy(x)\n",
     "                targets = torch.from_numpy(y)\n",
-    "\n",
-    "                # Adjust for GPU if necessary\n",
-    "                if model.use_gpu:\n",
-    "                    inputs = inputs.to(\"mps\")\n",
-    "                    targets = targets.to(\"mps\")\n",
+    "                inputs = inputs.to(\"mps\")\n",
+    "                targets = targets.to(\"mps\")\n",
     "                    \n",
-    "                # Reset Hidden State\n",
-    "                # If we dont' reset we would backpropagate through \n",
-    "                # all training history\n",
     "                val_hidden = tuple([state.data for state in val_hidden])\n",
-    "                \n",
     "                lstm_output, val_hidden = model.forward(inputs,val_hidden)\n",
     "                val_loss = criterion(lstm_output,targets.view(batch_size*seq_len).long())\n",
-    "        \n",
     "                val_losses.append(val_loss.item())\n",
     "            \n",
     "            # Reset to training model after val for loop\n",
