borges script working

--- a/notebooks/useful_methods/borges_first_pass.ipynb
+++ b/notebooks/useful_methods/borges_first_pass.ipynb
@@ -83,7 +83,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "89845"
+      "text/plain": [
+       "89845"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -108,7 +110,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "91"
+      "text/plain": [
+       "91"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -190,14 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0., 1., 0.],\n       [0., 0., 1.],\n       [1., 0., 0.]], dtype=float32)"
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [1., 0., 0.]], dtype=float32)"
+      ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,14 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "(10, 50)"
+      "text/plain": [
+       "(10, 50)"
+      ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +269,6 @@
     "\n",
     "            # FOR POTENTIAL INDEXING ERROR AT THE END\n",
     "            except:\n",
-    "                print(\"indexing error\")\n",
     "                y[:, :-1] = x[:, 1:]\n",
     "                y[:, -1] = encoded_text[:, 0]\n",
     "\n",
@@ -281,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,68 +354,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Instance of the Model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model = CharModel(\n",
-    "    all_chars=all_characters,\n",
-    "    num_hidden=64,\n",
-    "    num_layers=2,\n",
-    "    drop_prob=0.5,\n",
-    "    use_gpu=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "79387\n",
-      "89845\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_param  = []\n",
-    "for p in model.parameters():\n",
-    "    total_param.append(int(p.numel()))\n",
-    "\n",
-    "# Try to make the total_parameters be roughly the same magnitude as the number of characters in the text.\n",
-    "\n",
-    "print(sum(total_param))\n",
-    "print(len(encoded_text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Optimizer and Loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = torch.optim.Adam(model.parameters(),lr=0.001)\n",
-    "criterion = nn.CrossEntropyLoss()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -417,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,33 +381,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "indexing error\n",
       " size of generator 89\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(8984,)"
+      "text/plain": [
+       "(8984,)"
+      ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## VARIABLES\n",
-    "epochs = 1\n",
+    "## HyperParams\n",
+    "epochs = 20\n",
     "batch_size = 1\n",
     "seq_len = 100\n",
-    "tracker = 0\n",
+    "tracker = 10\n",
+    "num_lstm_layers = 3\n",
+    "dropout_p = .03\n",
+    "hidden_dim = 256\n",
     "num_char = max(encoded_text)+1\n",
+    "\n",
+    "model = CharModel(\n",
+    "    all_chars=all_characters,\n",
+    "    num_hidden=hidden_dim,\n",
+    "    num_layers=num_lstm_layers,\n",
+    "    drop_prob=dropout_p,\n",
+    "    use_gpu=False,\n",
+    ")\n",
+    "\n",
     "\n",
     "data_iter = generate_batches(train_data,batch_size,seq_len)\n",
     "print(f\" size of generator {sum(1 for _ in data_iter)}\")\n",
@@ -470,14 +455,59 @@
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0 Step: 25 Val Loss: 3.119316816329956\n",
+      "Epoch: 0 Step: 50 Val Loss: 3.0813751220703125\n",
+      "Epoch: 0 Step: 75 Val Loss: 3.027113676071167\n",
+      "Epoch: 1 Step: 100 Val Loss: 3.060596227645874\n",
+      "Epoch: 1 Step: 125 Val Loss: 3.05379056930542\n",
+      "Epoch: 1 Step: 150 Val Loss: 3.052138328552246\n",
+      "Epoch: 1 Step: 175 Val Loss: 3.0348711013793945\n",
+      "Epoch: 2 Step: 200 Val Loss: 3.0866332054138184\n",
+      "Epoch: 2 Step: 225 Val Loss: 3.07075834274292\n",
+      "Epoch: 2 Step: 250 Val Loss: 3.0325026512145996\n",
+      "Epoch: 2 Step: 275 Val Loss: 3.054020881652832\n",
+      "Epoch: 3 Step: 300 Val Loss: 3.054258108139038\n",
+      "Epoch: 3 Step: 325 Val Loss: 3.061342239379883\n",
+      "Epoch: 3 Step: 350 Val Loss: 3.0154459476470947\n",
+      "Epoch: 4 Step: 375 Val Loss: 3.0664584636688232\n",
+      "Epoch: 4 Step: 400 Val Loss: 2.9404304027557373\n",
+      "Epoch: 4 Step: 425 Val Loss: 2.8671436309814453\n",
+      "Epoch: 4 Step: 450 Val Loss: 2.9249086380004883\n",
+      "Epoch: 5 Step: 475 Val Loss: 2.780125617980957\n",
+      "Epoch: 5 Step: 500 Val Loss: 2.8080756664276123\n",
+      "Epoch: 5 Step: 525 Val Loss: 2.7295358180999756\n",
+      "Epoch: 6 Step: 550 Val Loss: 2.74923038482666\n",
+      "Epoch: 6 Step: 575 Val Loss: 2.7159223556518555\n",
+      "Epoch: 6 Step: 600 Val Loss: 2.6527373790740967\n",
+      "Epoch: 6 Step: 625 Val Loss: 2.649460792541504\n",
+      "Epoch: 7 Step: 650 Val Loss: 2.661949396133423\n",
+      "Epoch: 7 Step: 675 Val Loss: 2.5998008251190186\n",
+      "Epoch: 7 Step: 700 Val Loss: 2.551443576812744\n",
+      "Epoch: 8 Step: 725 Val Loss: 2.5785927772521973\n",
+      "Epoch: 8 Step: 750 Val Loss: 2.546696901321411\n",
+      "Epoch: 8 Step: 775 Val Loss: 2.563145637512207\n",
+      "Epoch: 8 Step: 800 Val Loss: 2.540846586227417\n",
+      "Epoch: 9 Step: 825 Val Loss: 2.5859251022338867\n",
+      "Epoch: 9 Step: 850 Val Loss: 2.485318899154663\n"
+     ]
+    }
+   ],
    "source": [
+    "optimizer = torch.optim.Adam(model.parameters(),lr=0.001)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
     "model.train()\n",
     "\n",
     "# Check to see if using GPU\n",
     "\n",
-    "torch.device(\"mps\")\n",
-    "model.to(\"mps\")\n",
+    "if model.use_gpu:\n",
+    "    torch.device(\"mps\")\n",
+    "    model.to(\"mps\")\n",
     "\n",
     "for i in range(epochs):\n",
     "    \n",
@@ -489,8 +519,9 @@
     "        x = one_hot_encoder(x,num_char)\n",
     "        inputs = torch.from_numpy(x)\n",
     "        targets = torch.from_numpy(y)\n",
-    "        inputs = inputs.to(\"mps\")\n",
-    "        targets = targets.to(\"mps\")\n",
+    "        if model.use_gpu:\n",
+    "            inputs = inputs.to(\"mps\")\n",
+    "            targets = targets.to(\"mps\")\n",
     "            \n",
     "        # If we don't reset we would backpropagate through all training history\n",
     "        hidden = tuple([state.data for state in hidden])\n",
@@ -504,7 +535,6 @@
     "        nn.utils.clip_grad_norm_(model.parameters(),max_norm=5)\n",
     "        optimizer.step()\n",
     "\n",
-    "        print(loss)\n",
     "        \n",
     "        ###################################\n",
     "        ### CHECK ON VALIDATION SET ######\n",
@@ -521,8 +551,9 @@
     "                x = one_hot_encoder(x,num_char)\n",
     "                inputs = torch.from_numpy(x)\n",
     "                targets = torch.from_numpy(y)\n",
-    "                inputs = inputs.to(\"mps\")\n",
-    "                targets = targets.to(\"mps\")\n",
+    "                if model.use_gpu:\n",
+    "                    inputs = inputs.to(\"mps\")\n",
+    "                    targets = targets.to(\"mps\")\n",
     "                    \n",
     "                val_hidden = tuple([state.data for state in val_hidden])\n",
     "                lstm_output, val_hidden = model.forward(inputs,val_hidden)\n",
@@ -549,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,29 +614,29 @@
     "\n",
     "model = CharModel(\n",
     "    all_chars=all_characters,\n",
-    "    num_hidden=512,\n",
-    "    num_layers=3,\n",
-    "    drop_prob=0.5,\n",
-    "    use_gpu=True,\n",
+    "    num_hidden=hidden_dim,\n",
+    "    num_layers=num_lstm_layers,\n",
+    "    drop_prob=dropout_p,\n",
+    "    use_gpu=False,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "CharModel(\n",
-       "  (lstm): LSTM(84, 512, num_layers=3, batch_first=True, dropout=0.5)\n",
-       "  (dropout): Dropout(p=0.5)\n",
-       "  (fc_linear): Linear(in_features=512, out_features=84, bias=True)\n",
+       "  (lstm): LSTM(91, 256, num_layers=3, batch_first=True, dropout=0.03)\n",
+       "  (dropout): Dropout(p=0.03, inplace=False)\n",
+       "  (fc_linear): Linear(in_features=256, out_features=91, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,62 +662,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_next_char(model, char, hidden=None, k=1):\n",
     "        \n",
-    "        # Encode raw letters with model\n",
     "        encoded_text = model.encoder[char]\n",
-    "        \n",
-    "        # set as numpy array for one hot encoding\n",
-    "        # NOTE THE [[ ]] dimensions!!\n",
     "        encoded_text = np.array([[encoded_text]])\n",
-    "        \n",
-    "        # One hot encoding\n",
     "        encoded_text = one_hot_encoder(encoded_text, len(model.all_chars))\n",
-    "        \n",
-    "        # Convert to Tensor\n",
     "        inputs = torch.from_numpy(encoded_text)\n",
     "        \n",
-    "        # Check for CPU\n",
     "        if(model.use_gpu):\n",
     "            inputs = inputs.to(\"mps\")\n",
     "        \n",
-    "        \n",
-    "        # Grab hidden states\n",
-    "        hidden = tuple([state.data for state in hidden])\n",
-    "        \n",
-    "        \n",
-    "        # Run model and get predicted output\n",
-    "        lstm_out, hidden = model(inputs, hidden)\n",
     "\n",
-    "        \n",
-    "        # Convert lstm_out to probabilities\n",
+    "        hidden = tuple([state.data for state in hidden])\n",
+    "        lstm_out, hidden = model(inputs, hidden)\n",
     "        probs = F.softmax(lstm_out, dim=1).data\n",
     "        \n",
-    "        \n",
-    "        \n",
     "        if(model.use_gpu):\n",
-    "            # move back to CPU to use with numpy\n",
-    "            probs = probs.cpu()\n",
+    "            probs = probs.to(\"mps\")\n",
     "        \n",
-    "        \n",
-    "        # k determines how many characters to consider\n",
-    "        # for our probability choice.\n",
-    "        # https://pytorch.org/docs/stable/torch.html#torch.topk\n",
-    "        \n",
-    "        # Return k largest probabilities in tensor\n",
+    "\n",
     "        probs, index_positions = probs.topk(k)\n",
-    "        \n",
-    "        \n",
     "        index_positions = index_positions.numpy().squeeze()\n",
     "        \n",
-    "        # Create array of probabilities\n",
     "        probs = probs.numpy().flatten()\n",
-    "        \n",
-    "        # Convert to probabilities per index\n",
     "        probs = probs/probs.sum()\n",
     "        \n",
     "        # randomly choose a character based on probabilities\n",
@@ -698,37 +700,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_text(model, size, seed='The', k=1):\n",
     "        \n",
-    "      \n",
-    "    \n",
-    "    # CHECK FOR GPU\n",
     "    if(model.use_gpu):\n",
     "        model.to(\"mps\")\n",
     "    else:\n",
     "        model.cpu()\n",
     "    \n",
-    "    # Evaluation mode\n",
     "    model.eval()\n",
-    "    \n",
-    "    # begin output from initial seed\n",
+    "\n",
     "    output_chars = [c for c in seed]\n",
-    "    \n",
-    "    # intiate hidden state\n",
+    "\n",
     "    hidden = model.hidden_state(1)\n",
-    "    \n",
-    "    # predict the next character for every character in seed\n",
     "    for char in seed:\n",
     "        char, hidden = predict_next_char(model, char, hidden, k=k)\n",
     "    \n",
-    "    # add initial characters to output\n",
+    "\n",
     "    output_chars.append(char)\n",
-    "    \n",
-    "    # Now generate for size requested\n",
+    "\n",
     "    for i in range(size):\n",
     "        \n",
     "        # predict based off very last letter in output_chars\n",
@@ -743,34 +736,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The will true and breathed to me.\n",
-      "    If thou wert better to the stare and send thee,\n",
-      "    Which hath any trives and sound and stretged,\n",
-      "    That have the better send of the constance,\n",
-      "    That then that thou shaltst but that have seem surpet\n",
-      "    And we had been the self-fight and had their strange,\n",
-      "    With his sward shall strave a servant state.\n",
-      "    Where this't she is that to the wind of held\n",
-      "    That have this serve that she he with the child\n",
-      "    Which they were beauty of their command strowes\n",
-      "    And truth and strength to the serves and song.\n",
-      "    If thou say'st he that hath seen this should still\n",
-      "    To she with his both shall see him.\n",
-      "    The world was a solder thou to heaven with me,\n",
-      "    And should this can stay that I heave make\n",
-      "    Which his charge in her shames, and to his state.\n",
-      "    That have tho stol'd of this starts to have,  \n",
-      "    And we and to the cheeks that to the stol'd\n",
-      "    To serve the courtier time of that sense is.\n",
-      "    In the summer that that shall not,\n",
-      "    That he will s\n"
+      "The un los de en de entesteria distera de lara leren es des de el de lo les el elas de le dera en de de en des de lo el le de les lo enteria la el la le el dian an de da lerasa en el de lostos lo los de de lerio de la elterasa des le da el entaria el ena dienta le la es las le ente les de des la elte en la le la lo elas de es de de el derio dista les enta los es lesa le entas de es de en le eltaro de le dia lariana le lo elte lo de lerena les enta le le le ena de de les es de dera de la le de de en de lerento de da elte la des le de da de dertoro en ena ena estas lesas el dertes da dertosta da le le el es lere de las la de de ela lo le les en le laresa le de le la la de el los derta ena de le la el esto des des de el de en de de dicen le en de de el esto le lo des la de le dicio le lo les entara en en de dis las de de la des de es de el das dica de le ente de ela le de le da eltes el los de les las de de la le la la el le le de eltara des\n",
+      "de les das elta lorante le esa lo de ena esta el de \n"
      ]
     }
    ],
@@ -788,9 +762,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_p38",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -802,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
