borges first pass improvements

--- a/notebooks/useful_methods/borges_first_pass.ipynb
+++ b/notebooks/useful_methods/borges_first_pass.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -460,40 +460,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0 Step: 25 Val Loss: 3.119316816329956\n",
-      "Epoch: 0 Step: 50 Val Loss: 3.0813751220703125\n",
-      "Epoch: 0 Step: 75 Val Loss: 3.027113676071167\n",
-      "Epoch: 1 Step: 100 Val Loss: 3.060596227645874\n",
-      "Epoch: 1 Step: 125 Val Loss: 3.05379056930542\n",
-      "Epoch: 1 Step: 150 Val Loss: 3.052138328552246\n",
-      "Epoch: 1 Step: 175 Val Loss: 3.0348711013793945\n",
-      "Epoch: 2 Step: 200 Val Loss: 3.0866332054138184\n",
-      "Epoch: 2 Step: 225 Val Loss: 3.07075834274292\n",
-      "Epoch: 2 Step: 250 Val Loss: 3.0325026512145996\n",
-      "Epoch: 2 Step: 275 Val Loss: 3.054020881652832\n",
-      "Epoch: 3 Step: 300 Val Loss: 3.054258108139038\n",
-      "Epoch: 3 Step: 325 Val Loss: 3.061342239379883\n",
-      "Epoch: 3 Step: 350 Val Loss: 3.0154459476470947\n",
-      "Epoch: 4 Step: 375 Val Loss: 3.0664584636688232\n",
-      "Epoch: 4 Step: 400 Val Loss: 2.9404304027557373\n",
-      "Epoch: 4 Step: 425 Val Loss: 2.8671436309814453\n",
-      "Epoch: 4 Step: 450 Val Loss: 2.9249086380004883\n",
-      "Epoch: 5 Step: 475 Val Loss: 2.780125617980957\n",
-      "Epoch: 5 Step: 500 Val Loss: 2.8080756664276123\n",
-      "Epoch: 5 Step: 525 Val Loss: 2.7295358180999756\n",
-      "Epoch: 6 Step: 550 Val Loss: 2.74923038482666\n",
-      "Epoch: 6 Step: 575 Val Loss: 2.7159223556518555\n",
-      "Epoch: 6 Step: 600 Val Loss: 2.6527373790740967\n",
-      "Epoch: 6 Step: 625 Val Loss: 2.649460792541504\n",
-      "Epoch: 7 Step: 650 Val Loss: 2.661949396133423\n",
-      "Epoch: 7 Step: 675 Val Loss: 2.5998008251190186\n",
-      "Epoch: 7 Step: 700 Val Loss: 2.551443576812744\n",
-      "Epoch: 8 Step: 725 Val Loss: 2.5785927772521973\n",
-      "Epoch: 8 Step: 750 Val Loss: 2.546696901321411\n",
-      "Epoch: 8 Step: 775 Val Loss: 2.563145637512207\n",
-      "Epoch: 8 Step: 800 Val Loss: 2.540846586227417\n",
-      "Epoch: 9 Step: 825 Val Loss: 2.5859251022338867\n",
-      "Epoch: 9 Step: 850 Val Loss: 2.485318899154663\n"
+      "Epoch: 0 Step: 925 Val Loss: 2.434739351272583\n",
+      "Epoch: 0 Step: 950 Val Loss: 2.4692535400390625\n",
+      "Epoch: 0 Step: 975 Val Loss: 2.4389488697052\n",
+      "Epoch: 1 Step: 1000 Val Loss: 2.4706244468688965\n",
+      "Epoch: 1 Step: 1025 Val Loss: 2.4445385932922363\n",
+      "Epoch: 1 Step: 1050 Val Loss: 2.4017136096954346\n",
+      "Epoch: 1 Step: 1075 Val Loss: 2.431654214859009\n",
+      "Epoch: 2 Step: 1100 Val Loss: 2.3836922645568848\n",
+      "Epoch: 2 Step: 1125 Val Loss: 2.4076969623565674\n",
+      "Epoch: 2 Step: 1150 Val Loss: 2.361847400665283\n",
+      "Epoch: 3 Step: 1175 Val Loss: 2.431674003601074\n",
+      "Epoch: 3 Step: 1200 Val Loss: 2.3702139854431152\n",
+      "Epoch: 3 Step: 1225 Val Loss: 2.334181547164917\n",
+      "Epoch: 3 Step: 1250 Val Loss: 2.3916594982147217\n",
+      "Epoch: 4 Step: 1275 Val Loss: 2.3287582397460938\n",
+      "Epoch: 4 Step: 1300 Val Loss: 2.3346707820892334\n",
+      "Epoch: 4 Step: 1325 Val Loss: 2.303309679031372\n",
+      "Epoch: 5 Step: 1350 Val Loss: 2.361212968826294\n",
+      "Epoch: 5 Step: 1375 Val Loss: 2.3097176551818848\n",
+      "Epoch: 5 Step: 1400 Val Loss: 2.324138879776001\n",
+      "Epoch: 5 Step: 1425 Val Loss: 2.3432059288024902\n",
+      "Epoch: 6 Step: 1450 Val Loss: 2.327937126159668\n",
+      "Epoch: 6 Step: 1475 Val Loss: 2.308730125427246\n",
+      "Epoch: 6 Step: 1500 Val Loss: 2.2437031269073486\n",
+      "Epoch: 7 Step: 1525 Val Loss: 2.323357343673706\n",
+      "Epoch: 7 Step: 1550 Val Loss: 2.251192569732666\n",
+      "Epoch: 7 Step: 1575 Val Loss: 2.333263635635376\n",
+      "Epoch: 7 Step: 1600 Val Loss: 2.308624744415283\n",
+      "Epoch: 8 Step: 1625 Val Loss: 2.334280490875244\n",
+      "Epoch: 8 Step: 1650 Val Loss: 2.3223607540130615\n",
+      "Epoch: 8 Step: 1675 Val Loss: 2.2248430252075195\n",
+      "Epoch: 8 Step: 1700 Val Loss: 2.3244810104370117\n",
+      "Epoch: 9 Step: 1725 Val Loss: 2.3253579139709473\n",
+      "Epoch: 9 Step: 1750 Val Loss: 2.256516456604004\n",
+      "Epoch: 9 Step: 1775 Val Loss: 2.236208438873291\n"
      ]
     }
    ],
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +637,7 @@
        ")"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,20 +737,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The un los de en de entesteria distera de lara leren es des de el de lo les el elas de le dera en de de en des de lo el le de les lo enteria la el la le el dian an de da lerasa en el de lostos lo los de de lerio de la elterasa des le da el entaria el ena dienta le la es las le ente les de des la elte en la le la lo elas de es de de el derio dista les enta los es lesa le entas de es de en le eltaro de le dia lariana le lo elte lo de lerena les enta le le le ena de de les es de dera de la le de de en de lerento de da elte la des le de da de dertoro en ena ena estas lesas el dertes da dertosta da le le el es lere de las la de de ela lo le les en le laresa le de le la la de el los derta ena de le la el esto des des de el de en de de dicen le en de de el esto le lo des la de le dicio le lo les entara en en de dis las de de la des de es de el das dica de le ente de ela le de le da eltes el los de les las de de la le la la el le le de eltara des\n",
-      "de les das elta lorante le esa lo de ena esta el de \n"
+      "El universo del poenio de la praceria de presiontas enta laseras en pranatina des pora en\n",
+      "tomesas cristertan y las pracion de la raatianta en en tontorao de las dencara de la riata de la poesa a las calte de poraateros consas era ento de parecaro el poena de la reretara de las porcera asa el esa el estrota la paesaros eltoraas del precero estas arastorades ena\n",
+      "ses cara\n",
+      "ento listoracan en en poera de preracras de poraas de los paena antorios que la porata el tranataras de presas des pricena la laciateria de la porrecana lan presara, de lo priciés de paraa una lan esto el pareces de portaco de las decarios del\n",
+      "dentician el eltariantes del prinaces de palosonte los tronatasas de caratarianan en estorio del\n",
+      "estasas, esterante de lo rastas de las deciante de la\n",
+      "\n",
+      "uasa esta del palacian del crentino en esitaraa en elto lertentara al entarera de las poratas del pracecoros crensorta des prantera de los decas erta de la raasa el lo sastentaro del lacatoraca las pritira an esitrita del caratario en eposas de \n"
      ]
     }
    ],
    "source": [
-    "print(generate_text(model, 1000, seed='The ', k=3))"
+    "print(generate_text(model, 1000, seed='El universo ', k=3))"
    ]
   },
   {
